--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,30 @@
-<div class="movie-items full-width" style="padding-top: 125px; background-color: transparent;">
+<div
+  class="movie-items full-width"
+  style="padding-top: 125px; background-color: transparent"
+>
   <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" *ngFor="let image of images, let i = index" attr.data-slide-to="{{i}}"
-        [ngClass]="{'active': i === 0, 'inactive': i !== 0}" [id]="i" style="margin-left: 2px; margin-right: 2px;"></li>
+      <li
+        data-target="#carouselExampleCaptions"
+        *ngFor="let image of images; let i = index"
+        attr.data-slide-to="{{ i }}"
+        [ngClass]="{ active: i === 0, inactive: i !== 0 }"
+        [id]="i"
+        style="margin-left: 2px; margin-right: 2px"
+      ></li>
     </ol>
     <div class="carousel-inner">
-      <div class="item carousel-height" *ngFor="let image of images, let i = index"
-        [ngClass]="{'active': i === 0, 'inactive': i !== 0}">
-        <img class="d-block w-100 carousel-height" [src]="image" data-holder-rendered="true"
-          style="object-fit: cover; width: 100%; height: 300px;">
+      <div
+        class="item carousel-height"
+        *ngFor="let image of images; let i = index"
+        [ngClass]="{ active: i === 0, inactive: i !== 0 }"
+      >
+        <img
+          class="d-block w-100 carousel-height"
+          [src]="image"
+          data-holder-rendered="true"
+          style="object-fit: cover; width: 100%; height: 300px"
+        />
       </div>
     </div>
   </div>
@@ -17,36 +33,44 @@
 <div class="movie-items full-width">
   <div class="title-hd">
     <h2>Estreno</h2>
-    <a routerLink="/peliculas" style="Color:white">Ver todos</a>
+    <a routerLink="/peliculas" style="color: white">Ver todos</a>
   </div>
-  <div style="display:flex; flex-wrap: wrap;">
+  <app-spinner [condicion]="peliculas.length === 0"></app-spinner>
+  <div style="display: flex; flex-wrap: wrap">
     <div *ngFor="let peli of peliculas">
       <div *ngIf="peli.estreno">
         <div class="card">
-          <a routerLink="/info/{{peli.id}}" class="a">
-            <div class="info"><span style="font-size: 15px; font-weight: bold; color:white">Ver info</span></div>
-            <img class="imagen" src="{{peli.imagen}}">
+          <a routerLink="/info/{{ peli.id }}" class="a">
+            <div class="info">
+              <span style="font-size: 15px; font-weight: bold; color: white"
+                >Ver info</span
+              >
+            </div>
+            <img class="imagen" src="{{ peli.imagen }}" />
           </a>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 
 <div class="movie-items full-width">
   <div class="title-hd">
     <h2>Acción</h2>
-    <a routerLink="/peliculas" style="Color:white">Ver todos</a>
+    <a routerLink="/peliculas" style="color: white">Ver todos</a>
   </div>
-  <div style="display:flex; flex-wrap: wrap;">
+  <app-spinner [condicion]="peliculas.length === 0"></app-spinner>
+  <div style="display: flex; flex-wrap: wrap">
     <div *ngFor="let peli of peliculas">
       <div *ngIf="peli.genero == 'Acción'">
-
         <div class="card">
-            <a routerLink="/info/{{peli.id}}" class="a">
-                <div class="info"><span style="font-size: 15px; font-weight: bold; color:white">Ver info</span></div>
-            <img class="imagen" src="{{peli.imagen}}">
+          <a routerLink="/info/{{ peli.id }}" class="a">
+            <div class="info">
+              <span style="font-size: 15px; font-weight: bold; color: white"
+                >Ver info</span
+              >
+            </div>
+            <img class="imagen" src="{{ peli.imagen }}" />
           </a>
         </div>
       </div>
@@ -55,43 +79,49 @@
 </div>
 
 <div class="movie-items full-width">
-    <div class="title-hd">
-      <h2>Drama</h2>
-      <a routerLink="/peliculas" style="Color:white">Ver todos</a>
-    </div>
-    <div style="display:flex; flex-wrap: wrap;">
-      <div *ngFor="let peli of peliculas">
-        <div *ngIf="peli.genero == 'Drama'">
-  
-          <div class="card">
-            <a routerLink="/info/{{peli.id}}" class="a">
-                <div class="info"><span style="font-size: 15px; font-weight: bold; color:white">Ver info</span></div>
-              <img class="imagen" src="{{peli.imagen}}">
-            </a>
-          </div>
+  <div class="title-hd">
+    <h2>Drama</h2>
+    <a routerLink="/peliculas" style="color: white">Ver todos</a>
+  </div>
+  <app-spinner [condicion]="peliculas.length === 0"></app-spinner>
+  <div style="display: flex; flex-wrap: wrap">
+    <div *ngFor="let peli of peliculas">
+      <div *ngIf="peli.genero == 'Drama'">
+        <div class="card">
+          <a routerLink="/info/{{ peli.id }}" class="a">
+            <div class="info">
+              <span style="font-size: 15px; font-weight: bold; color: white"
+                >Ver info</span
+              >
+            </div>
+            <img class="imagen" src="{{ peli.imagen }}" />
+          </a>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="movie-items full-width">
-    <div class="title-hd">
-      <h2>Ciencia Ficción</h2>
-      <a routerLink="/peliculas" style="Color:white">Ver todos</a>
-    </div>
-    <div style="display:flex; flex-wrap: wrap;">
-      <div *ngFor="let peli of peliculas">
-        <div *ngIf="peli.genero == 'Ciencia Ficción'">
-  
-          <div class="card">
-            <a routerLink="/info/{{peli.id}}" class="a">
-                <div class="info"><span style="font-size: 15px; font-weight: bold; color:white">Ver info</span></div>
-              <img class="imagen" src="{{peli.imagen}}">
-            </a>
-          </div>
+<div class="movie-items full-width">
+  <div class="title-hd">
+    <h2>Ciencia Ficción</h2>
+    <a routerLink="/peliculas" style="color: white">Ver todos</a>
+  </div>
+  <app-spinner [condicion]="peliculas.length === 0"></app-spinner>
+  <div style="display: flex; flex-wrap: wrap">
+    <div *ngFor="let peli of peliculas">
+      <div *ngIf="peli.genero == 'Ciencia Ficción'">
+        <div class="card">
+          <a routerLink="/info/{{ peli.id }}" class="a">
+            <div class="info">
+              <span style="font-size: 15px; font-weight: bold; color: white"
+                >Ver info</span
+              >
+            </div>
+            <img class="imagen" src="{{ peli.imagen }}" />
+          </a>
         </div>
       </div>
     </div>
   </div>
-
-
+</div>
